--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Khanh Blog</a>
+    <a class="navbar-brand" href="/">Khanh Blog</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -18,7 +18,7 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="/courses/create">Đăng khóa học</a>
         </li>
         <li class="nav-item dropdown">
           <a
