--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -10,3 +10,9 @@ h1 {
 .card-courses-item {
   margin-top: 15px;
 }
+.user-avatar {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  margin-right: 4px;
+}
