--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/">Khanh Blog</a>
+  <div class="container">
+    <a class="navbar-brand" style="margin-right: 5%;" href="/">Khanh Blog</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -12,35 +12,7 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/courses/create">Đăng khóa học</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
+    <div class="navbar-collapse" id="navbarSupportedContent">
       <form class="d-flex mt-2 mb-2" role="search">
         <input
           class="form-control me-2"
@@ -50,6 +22,35 @@
         />
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
+      <ul class="navbar-nav mb-2 mb-lg-0" style="margin-left: auto;">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            <img
+              src="https://nhadepso.com/wp-content/uploads/2023/01/anh-dai-dien-cho-nam_2.jpg"
+              alt=""
+              class="user-avatar"
+            />
+            Khanh Ho Sy
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/courses/create">Đăng khóa học</a></li>
+            <li><a class="dropdown-item" href="/me/stored/courses">Khóa học của
+                tôi</a></li>
+            <li><a class="dropdown-item" href="/me/stored/news">Bài viết của tôi</a></li>
+            <li><hr class="dropdown-divider" /></li>
+            <li><a class="dropdown-item" href="#">Đăng xuất</a></li>
+          </ul>
+        </li>
+      </ul>
     </div>
   </div>
 </nav>
