--- a/src/resources/views/me/stored-courses.hbs
+++ b/src/resources/views/me/stored-courses.hbs
@@ -18,10 +18,60 @@
           <td>{{this.createdAt}}</td>
           <td>
             <a href="/courses/{{this._id}}/edit" class="btn btn-warning">Sửa</a>
-            <a href="" class="btn btn-danger">Xóa</a>
+            <a
+              href=""
+              class="btn btn-danger"
+              data-bs-toggle="modal"
+              data-bs-target="#delete-courses-modal"
+              data-id="{{this._id}}"
+            >Xóa</a>
           </td>
         </tr>
       {{/each}}
     </tbody>
   </table>
 </div>
+
+{{! Confirm }}
+
+<div id="delete-courses-modal" class="modal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Xóa khóa học</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <p>Bạn có chắc chắn muốn xóa khóa học này?</p>
+      </div>
+      <div class="modal-footer">
+        <button
+          type="button"
+          class="btn btn-secondary"
+          data-bs-dismiss="modal"
+        >Hủy</button>
+        <button id="btn-delete-course" type="button" class="btn btn-danger">Xóa
+          bỏ</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+{{! Delete hidden  form }}
+<form method="POST" name="delete-course-form"></form>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function () { var courseId; var
+  deleteForm = document.forms["delete-course-form"]; var modal =
+  document.getElementById("delete-courses-modal"); var btnDeleteCourse =
+  document.getElementById("btn-delete-course");
+  modal.addEventListener("show.bs.modal", function (event) { var button =
+  event.relatedTarget; courseId = button.getAttribute("data-id"); });
+  btnDeleteCourse.onclick = function () { deleteForm.action = "/courses/" +
+  courseId + "?_method=DELETE"; deleteForm.submit(); }; });
+</script>
