code software deleted

--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
   <div class="container">
-    <a class="navbar-brand" style="margin-right: 5%;" href="/">Khanh Blog</a>
+    <a class="navbar-brand" style="margin-right: 5%; font-size: 25px" href="/">Khanh Blog</a>
     <button
       class="navbar-toggler"
       type="button"
