--- a/src/resources/views/me/stored-courses.hbs
+++ b/src/resources/views/me/stored-courses.hbs
@@ -1,5 +1,13 @@
 <div class="mt-4">
-  <h3>Khóa học của tôi</h3>
+  <div>
+    <h3>Khóa học của tôi</h3>
+    <a href="/me/trash/courses" style="text-decoration: none; font-size: 20px">
+      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+        <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/>
+      </svg>
+      Thùng rác
+    </a>
+  </div>
   <table class="table mt-4">
     <thead>
       <tr>
@@ -25,6 +33,13 @@
               data-bs-target="#delete-courses-modal"
               data-id="{{this._id}}"
             >Xóa</a>
+          </td>
+        </tr>
+      {{else}}
+        <tr>
+          <td colspan="5" class="text-center">
+            Bạn chưa đăng khóa học nào
+            <a href="/courses/create">Đăng khóa học</a>
           </td>
         </tr>
       {{/each}}
@@ -66,12 +81,18 @@
 <form method="POST" name="delete-course-form"></form>
 
 <script>
-  document.addEventListener("DOMContentLoaded", function () { var courseId; var
-  deleteForm = document.forms["delete-course-form"]; var modal =
-  document.getElementById("delete-courses-modal"); var btnDeleteCourse =
-  document.getElementById("btn-delete-course");
-  modal.addEventListener("show.bs.modal", function (event) { var button =
-  event.relatedTarget; courseId = button.getAttribute("data-id"); });
-  btnDeleteCourse.onclick = function () { deleteForm.action = "/courses/" +
-  courseId + "?_method=DELETE"; deleteForm.submit(); }; });
+  document.addEventListener("DOMContentLoaded", function () {
+    var courseId;
+    var deleteForm = document.forms["delete-course-form"];
+    var modal = document.getElementById("delete-courses-modal");
+    var btnDeleteCourse = document.getElementById("btn-delete-course");
+    modal.addEventListener("show.bs.modal", function (event) {
+      var button = event.relatedTarget;
+      courseId = button.getAttribute("data-id");
+    });
+    btnDeleteCourse.onclick = function () {
+      deleteForm.action = "/courses/" + courseId + "?_method=DELETE";
+      deleteForm.submit();
+    };
+  });
 </script>
