--- a/src/resources/views/me/stored-courses.hbs
+++ b/src/resources/views/me/stored-courses.hbs
@@ -1,4 +1,4 @@
-<div class="mt-4">
+<form class="mt-4" method="POST" action="/courses/handle-form-actions">
   <div>
     <h3>Khóa học của tôi</h3>
     <a href="/me/trash/courses" style="text-decoration: none; font-size: 20px">
@@ -7,11 +7,25 @@
       </svg>
       Thùng rác ({{deletedCount}})
     </a>
+    <div class="mt-4 d-flex align-items-center">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="checkbox-all">
+        <label class="form-check-label" for="checkbox-all">
+          Chọn tất cả
+        </label>
+      </div>
+      <select class="form-select form-select-sm select-all-options" aria-label="Small select example" name="action" required>
+        <option value="">--Chọn hành động--</option>
+        <option value="delete">Xóa</option>
+      </select>
+
+      <button class="btn btn-primary btn-sm check-all-submit-btn disabled">Thực hiện</button>
+    </div>
   </div>
   <table class="table mt-4">
     <thead>
       <tr>
-        <th scope="col">#</th>
+        <th scope="col" colspan="2">#</th>
         <th scope="col">Tên khóa học</th>
         <th scope="col">Trình độ</th>
         <th scope="col" colspan="2">Thời gian tạo</th>
@@ -20,6 +34,11 @@
     <tbody>
       {{#each courses}}
         <tr>
+          <td>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" name="courseIds[]" value="{{this._id}}">
+            </div>
+          </td>
           <th scope="row">{{sum @index 1}}</th>
           <td>{{this.name}}</td>
           <td>{{this.level}}</td>
@@ -45,7 +64,7 @@
       {{/each}}
     </tbody>
   </table>
-</div>
+</form>
 
 {{! Confirm }}
 
@@ -86,13 +105,59 @@
     var deleteForm = document.forms["delete-course-form"];
     var modal = document.getElementById("delete-courses-modal");
     var btnDeleteCourse = document.getElementById("btn-delete-course");
+    var checkboxAll = document.getElementById('checkbox-all');
+    var courseItemCheckbox = document.querySelectorAll('input[name="courseIds[]"]');
+    var checkAllSubmitBtn = document.querySelector('.check-all-submit-btn');
+
     modal.addEventListener("show.bs.modal", function (event) {
       var button = event.relatedTarget;
       courseId = button.getAttribute("data-id");
     });
+
     btnDeleteCourse.onclick = function () {
       deleteForm.action = "/courses/" + courseId + "?_method=DELETE";
       deleteForm.submit();
     };
+
+    //Checkbox all changed
+    checkboxAll.addEventListener('change', function() {
+      const checkboxes = document.querySelectorAll('input[type="checkbox"]');
+      checkboxes.forEach(function(checkbox) {
+          // Đặt trạng thái checked của mỗi checkbox bằng trạng thái checked của checkboxAll
+          checkbox.checked = checkboxAll.checked;
+      }); 
+
+      renderCheckAllSubmitBtn();
+    });
+
+    //
+    let allChecked = true; 
+    courseItemCheckbox.forEach(function(checkbox) {
+      // Thêm sự kiện "change" cho từng checkbox
+      checkbox.addEventListener('change', function() {
+          allChecked = true; // Reset lại trạng thái của allChecked mỗi khi một checkbox thay đổi
+          courseItemCheckbox.forEach(function(innerCheckbox) {
+              if (!innerCheckbox.checked) {
+                  allChecked = false;
+                  return;
+              }
+          });
+          checkboxAll.checked = allChecked;
+
+          renderCheckAllSubmitBtn();
+      });
+    });
+
+    // Hàm renderCheckAllSubmitBtn để kiểm tra số lượng checkbox được chọn và thêm/xóa lớp 'disabled' cho nút submit
+    function renderCheckAllSubmitBtn() {
+        var checkedCheckbox = document.querySelectorAll('input[name="courseIds[]"]:checked');
+        
+        if (checkedCheckbox.length > 0) {
+            checkAllSubmitBtn.classList.remove('disabled');
+        } else {
+            checkAllSubmitBtn.classList.add('disabled');
+        }
+    }
+
   });
 </script>
