--- a/src/resources/views/me/stored-courses.hbs
+++ b/src/resources/views/me/stored-courses.hbs
@@ -18,7 +18,6 @@
         <option value="">--Chọn hành động--</option>
         <option value="delete">Xóa</option>
       </select>
-
       <button class="btn btn-primary btn-sm check-all-submit-btn disabled">Thực hiện</button>
     </div>
   </div>
@@ -73,6 +72,21 @@
       {{/each}}
     </tbody>
   </table>
+  <nav aria-label="Page navigation">
+      <ul class="pagination justify-content-center">
+        {{#if totalPages}}
+            {{#each pages}}
+                <li class="page-item m-1 {{#if (eq this ../currentPage)}}active{{/if}}">
+                    <a class="page-link" href="/me/stored/courses?page={{this}}">{{this}}</a>
+                </li>
+            {{/each}}
+        {{else}}
+            <li class="page-item disabled">
+                <span class="page-link">1</span>
+            </li>
+        {{/if}}
+      </ul>
+  </nav>
 </form>
 
 {{! Confirm }}
